--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <span class="phone">+30 210 123 4567</span>
     </a>
   </div>
+   <div id="google_translate_element"></div>
 </div>
 
 
@@ -721,6 +722,20 @@ document.getElementById("searchForm").addEventListener("submit", e => {
   }
 });
 </script>
+
+<div id="google_translate_element"></div>
+
+<script type="text/javascript">
+  function googleTranslateElementInit() {
+    new google.translate.TranslateElement({
+      pageLanguage: 'en',
+      includedLanguages: 'en,el,fr,de,it,es',
+      layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+    }, 'google_translate_element');
+  }
+</script>
+
+<script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
 
 </body>
