--- a/destination-details.html
+++ b/destination-details.html
@@ -913,5 +913,16 @@ function showExcursionModal(exc) {
 
 </script>
 
+<script>
+  document.addEventListener("DOMContentLoaded", () => {
+    const toggleBtn = document.querySelector(".menu-toggle");
+    const navLinks = document.querySelector(".nav-links");
+
+    toggleBtn.addEventListener("click", () => {
+      navLinks.classList.toggle("active");
+    });
+  });
+</script>
+
 </body>
 </html>
